--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
+        working-directory: ./api/src
         with:
           go-version: ${{ matrix.go-version }}
       - name: Display Go version
         run: go version
-      - run: cd api/src
       - name: Install dependencies
         run: go get .
       - name: Build
@@ -35,11 +35,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
+        working-directory: ./api/src
         with:
           go-version: ${{ matrix.go-version }}
       - name: Display Go version
         run: go version
-      - run: cd api/src
       - name: Install dependencies
         run: go get .
       - name: Test with Go
