--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
     strategy:
       matrix:
         go-version: [ '1.24.x' ]
+    defaults:
+      run:
+          working-directory: ./api/src
 
     steps:
       - uses: actions/checkout@v4
