--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,11 @@ jobs:
       - name: Install dependencies
         run: go get .
       - name: Test with Go
-        run: go test -json > TestResults-${{ matrix.go-version }}.json
+        run: |
+          go test -coverprofile coverage.out ./...
+          go tool cover -html=coverage.out -o coverage-${{ matrix.go-version }}.html
       - name: Upload Go test results
         uses: actions/upload-artifact@v4
         with:
           name: Go-results-${{ matrix.go-version }}
-          path: TestResults-${{ matrix.go-version }}.json
+          path: coverage-${{ matrix.go-version }}.html
