feat: env_file in secrets

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,11 +78,7 @@ jobs:
         uses: 'google-github-actions/setup-gcloud@v2'
 
       - name: Check env access
-        run: | 
-          echo ${{ vars.POSTGRES_DB }}
-          echo ${{ vars.POSTGRES_HOST }}
-          echo ${{ vars.POSTGRES_PASSWORD }}
-          echo ${{ vars.POSTGRES_USER }}
+        run: echo "${{ secrets.ENV_FILE }}"
 
       # - name: Configure Docker
       #   run: |
