fix: path to docker compose file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,6 @@ jobs:
 
     - name: Build Docker images
       run: |
-        docker compose -f docker-compose.yml up -d --build
+        docker compose -f api/deploy/docker-compose.yml up -d --build
         docker ps
 
