fix: deploy region sintax error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
         gcloud run deploy to-do-app-database-service \
           --image ${{ env.DOCKER_IMAGE_DB_URL }} \
           --platform managed \
-          --region "${{ secrets.GCP_LOCATION }} \
+          --region ${{ secrets.GCP_LOCATION }} \
           --allow-unauthenticated
 
     - name: Deploy App to Cloud Run
@@ -66,5 +66,5 @@ jobs:
         gcloud run deploy to-do-app-service \
           --image ${{ env.DOCKER_IMAGE_APP_URL }} \
           --platform managed \
-          --region "${{ secrets.GCP_LOCATION }} \
+          --region ${{ secrets.GCP_LOCATION }} \
           --allow-unauthenticated
