fix: remove project id from deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,5 +70,4 @@ jobs:
           --port 5432 \
           --memory 512Mi \
           --cpu 1 \
-          --max-instances 1 \
-          --project ${{ secrets.GCP_PROJECT_ID  }}
+          --max-instances 1
