--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,9 +58,9 @@ jobs:
             --cpu 1 \
             --max-instances 1 \
             --add-cloudsql-instances ${{ secrets.DB_INSTANCE_CONNECTION_NAME }} \
-            --set-env-vars INSTANCE_UNIX_SOCKET="/cloudsql/${{ secrets.DB_INSTANCE_CONNECTION_NAME }}" \
+            --set-env-vars POSTGRES_HOST="/cloudsql/${{ secrets.DB_INSTANCE_CONNECTION_NAME }}" \
             --set-env-vars INSTANCE_CONNECTION_NAME="${{ secrets.DB_INSTANCE_CONNECTION_NAME }}" \
-            --set-env-vars DB_NAME="${{ secrets.DB_NAME }}" \
-            --set-env-vars DB_USER="${{ secrets.DB_USER }}" \
-            --set-env-vars DB_PASS="${{ secrets.DB_PASSWORD }}" \
+            --set-env-vars POSTGRES_DB="${{ secrets.DB_NAME }}" \
+            --set-env-vars POSTGRES_USER="${{ secrets.DB_USER }}" \
+            --set-env-vars POSTGRES_PASSWORD="${{ secrets.DB_PASSWORD }}" \
             --allow-unauthenticated
